# cwdaemon

./: .clang-tidy  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.dev.org  TODO  aclocal.m4  config.h.in  configure  configure.ac  configure.in  cwdaemon.8.in  cwdaemon.c  cwdaemon.h  cwdaemon.spec  cwdaemon.spec.in  cwsetup.sh  lp.c  qa_build_debian.sh
debian/: README.Debian  changelog  control  copyright  cwdaemon.default  cwdaemon.init  dirs  init.d  rules  watch
debian/patches/: 01-Removed-bashism-from-cwsetup.patch  02-libcw3-transition.patch  03-generator-start.patch  04-buffer-end.patch  05-ptt-off-wait.patch  06-install-scripts-as-scripts.patch  series
debian/source/: options
doc/: Makefile.am  Makefile.in  cwdaemon.8.in  misc.md
doc/schematics/: parallelport_circuit.ps  serialport_circuit.ps
doc/specifications/: escape_codes.txt  ptt.txt  terminology.txt
examples/: Makefile.am  Makefile.in  README  example.c  example.pl  example.sh  example2.c
patches/: cwdaemon-0.5-sergei.diff  cwdaemon-0.7-ok1zia.diff  cwdaemon-mt.patch
qa/: build_debian_packages.sh  clang_tidy.sh  compile_headers.sh  lint_clang_tidy.sh  tests.org
qa/release_checklist/: 0.13.0.org  template.org
qa/test_scenarios/: 0.12.0.org  0.13.0.org  template.org
src/: Makefile.am  Makefile.in  clang_tidy.sh  cwdaemon.c  cwdaemon.h  help.c  help.h  log.c  log.h  lp.c  lp.h  null.c  options.c  options.h  sleep.c  sleep.h  socket.c  socket.h  ttys.c  ttys.h  utils.c  utils.h
src/lib/: Makefile.am  Makefile.in  random.c  random.h  sleep.c  sleep.h
test/: Makefile.am  Makefile.in  cwtest  cwtest.c  cwtest.c~  cwtest.pl  cwtest2  cwtest2.c  cwtest2.c~  cwtest_esc2.pl  cwtest_esc3.pl  cwtest_esc5.pl  cwtest_esc5.sh  cwtest_esc64.pl  cwtest_esc7.pl  cwtest_esc8.pl  cwtest_escd.pl  cwtest_escf.pl  cwtest_escg.pl  cwtest_short_space.pl
test/cwdaemon/: client.pm
test/cwdaemon/test/: common.pm
test/test_001_basic_process_control/: Makefile.am  Makefile.in  main.c
test/test_001_reset_register_callback/: Makefile.am  Makefile.in  README.txt  cw_rec_utils.c  key_source.c  key_source.h  key_source_serial.c  key_source_serial.h  main.c
test/test_002_always_succeed/: Makefile.am  Makefile.in  main.c
test/test_002_reset_register_callback/: Makefile.am  Makefile.in  main.c
test/test_003_cwdevice_tty_line_options/: Makefile.am  Makefile.in  main.c
tests/: Makefile.am  Makefile.in  clang_tidy.sh  cwtest.pl  cwtest_esc2.pl  cwtest_esc3.pl  cwtest_esc5.pl  cwtest_esc5.sh  cwtest_esc64.pl  cwtest_esc7.pl  cwtest_esc8.pl  cwtest_esca.pl  cwtest_escc.pl  cwtest_escd.pl  cwtest_escf.pl  cwtest_escg.pl  cwtest_short_space.pl
tests/cwdaemon/: client.pm
tests/cwdaemon/test/: common.pm
tests/functional_tests/: Makefile.am  Makefile.in
tests/functional_tests/automatic/: Makefile.am  Makefile.in
tests/functional_tests/automatic/option_cwdevice_tty_lines/: Makefile.am  Makefile.in  main.c
tests/functional_tests/automatic/option_port/: Makefile.am  Makefile.in  main.c
tests/functional_tests/automatic/request_caret/: Makefile.am  Makefile.in  basic.c  basic.h  main.c  request_size.c  request_size.h  shared.c  shared.h
tests/functional_tests/automatic/request_esc_5/: Makefile.in  README  main.c
tests/functional_tests/automatic/request_esc_cwdevice/: Makefile.in  basic.h  shared.c  shared.h
tests/functional_tests/automatic/request_esc_exit/: Makefile.in  main.c
tests/functional_tests/automatic/request_esc_h/: Makefile.am  Makefile.in  main.c
tests/functional_tests/automatic/request_esc_reply/: Makefile.am  Makefile.in  basic.c  basic.h  main.c  request_size.c  request_size.h  shared.c  shared.h
tests/functional_tests/automatic/request_plain/: Makefile.am  Makefile.in  basic.c  basic.h  main.c  request_size.c  request_size.h  shared.c  shared.h
tests/functional_tests/automatic/reset_register_callback/: Makefile.am  Makefile.in  README  main.c
tests/functional_tests/manual/: Makefile.am  Makefile.in
tests/functional_tests/manual/feature_multiple_requests/: Makefile.am  Makefile.in  main.c
tests/functional_tests/manual/request_esc_sound_system/: Makefile.in  basic.c  main.c  shared.c
tests/functional_tests/supervised/: Makefile.am  Makefile.in
tests/functional_tests/supervised/feature_multiple_requests/: Makefile.am  Makefile.in  main.c
tests/functional_tests/supervised/request_esc_port/: Makefile.in  basic.c  basic.h  main.c  shared.c  shared.h
tests/functional_tests/supervised/request_esc_sound_system/: Makefile.am  Makefile.in  basic.h  main.c  shared.c  shared.h
tests/functional_tests/unattended/: Makefile.am  Makefile.in
tests/functional_tests/unattended/option_cwdevice_tty_lines/: Makefile.in  main.c
tests/functional_tests/unattended/option_port/: Makefile.in  main.c
tests/functional_tests/unattended/request_caret/: Makefile.am  Makefile.in  basic.h  main.c  request_size.c  shared.c
tests/functional_tests/unattended/request_esc_cwdevice/: Makefile.am  Makefile.in  basic.c  main.c  shared.c  shared.h
tests/functional_tests/unattended/request_esc_exit/: Makefile.am  Makefile.in  main.c
tests/functional_tests/unattended/request_esc_reply/: Makefile.in  basic.c  basic.h  main.c  request_size.c  shared.h
tests/functional_tests/unattended/request_plain/: Makefile.am  Makefile.in  basic.c  basic.h  main.c  request_size.h  shared.c
tests/functional_tests/unattended/reset_register_callback/: Makefile.am  Makefile.in  main.c
tests/fuzzing/: Makefile.am  Makefile.in
tests/fuzzing/simple/: Makefile.in  main.c
tests/test_001_basic_process_control/: Makefile.am  Makefile.in  main.c
tests/test_002_reset_register_callback/: Makefile.am  Makefile.in  main.c
tests/test_003_cwdevice_tty_line_options/: Makefile.am  Makefile.in  main.c
tests/unit_tests/: Makefile.am  Makefile.in  README  daemon_options.c  daemon_sleep.c  daemon_stubs.c  daemon_utils.c  random.c  tests_events.c  tests_morse_receiver.c  tests_random.c  tests_string_utils.c  tests_time_utils.c  time_utils.c  utils.c
tests_unit/: utils.c
tools/: serial.c
