# Copyright (C) 2003, 2006 Joop Stakenborg <pg4i@amsat.org>
# Copyright (C) 2012 - 2013 Kamil Ignacak (acerion@wp.pl)
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#

# program(s) to be built in current dir
noinst_PROGRAMS = cwtest

# source code files used to build cwtest program
cwtest_SOURCES = cwtest.c
# target-specific preprocessor flags (#defs and include dirs)
# cwtest_CPPFLAGS =
# target-specific linker flags (objects to link)
# cwtest_LDADD =


